Added Logo and Simple Footer

--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -3,3 +3,21 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+
+/*primary-color */
+$primary-color: #ededed;
+
+/*Background-Color */
+$red: #f95959;
+$yellow: #facf5a;
+$blue: #455d7a;
+$green: #53d397;
+$pink: #f62a66;
+
+/* Fonts */
+
+$font-marienda: "Merienda", cursive;
+$font-chelaOne: "Chela One", cursive;
+$font-eczar: "Eczar", serif;
+$font-pacifico: "Pacifico", cursive;
+$font-orbitron: "Orbitron", sans-serif;
